--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="header"><p>Header</p></div>
+   <div class="main">
+    <div class="grid"><div class="maicontent"><p>main</p></div><div class="sidebar"><p>sidebar</p></div></div>
+    <div class="flex"><div class="twin"><p>twin</p></div><div class="twin"><p>twin</p></div></div>
+   </div>
+    <div class="footer"><p>Footer</p></div>
 </body>
 </html>
